# RMUC24

./: README.md  RMUC24.md
RMUC24_simulation/fp_sim/: CMakeLists.txt  package.xml
RMUC24_simulation/fp_sim/config/: pure-laser.lua
RMUC24_simulation/fp_sim/config/teb_2023/: RT.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  teb_local_planner_params.yaml
RMUC24_simulation/fp_sim/config/teb_2024_sim/: RT.yaml  Readme.md  base_global_planner_param.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  pure-laser.lua
RMUC24_simulation/fp_sim/config/teb_old/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
RMUC24_simulation/fp_sim/config/tfc/: global_costmap_params.yaml  local_costmap_params.yaml
RMUC24_simulation/fp_sim/launch/: 2024rmuc_sim.launch  amcl.launch  carto-pure-laser.launch  hector_mapping.launch  move2.launch  move_base.launch
RMUC24_simulation/fp_sim/maps/: map.pgm  map.yaml
RMUC24_simulation/fp_sim/maps/2023_maps/: 2023v3.pgm  2023v310.yaml  2023v31map.pgm  2023v34map.pgm  2023v39map.pgm  2023v3map.pbstream  2023v3map.pgm  2023v3map.yaml  2023v3map（复件）.pgm  562map.pbstream  562map.pgm  562map.yaml  mymap.pbstream  mymap.pgm  mymap.yaml  test.pgm
RMUC24_simulation/fp_sim/script/: 4444.py  change_model.py  icp.py  openvino_python.py
RMUC24_simulation/fp_sim/world/2023_worlds/:  NJ3.world  2023.world  20232  20232.world  2023rmuc  2023rmuc.world  NJ6.xml  (+6 more)
(+292 files in other folders)
